hard-gists/73c9565719d124af64ff/run.log
=== Docker Run Log for 73c9565719d124af64ff ===
Started at: Mi 29. Okt 17:09:00 CET 2025

[2025-10-29 17:09:00] START: Running container for 73c9565719d124af64ff
[2025-10-29 17:09:00] SUCCESS: Container 607b3e4265f4e065f2338d91ed65d031b2087d6419f77eb968e11e098d8a7805 started for 73c9565719d124af64ff
=== Container logs for 73c9565719d124af64ff ===
  File "/snippet.py", line 22
    print "%s (expecting %s): +1" % (
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 73c9565719d124af64ff ===
[2025-10-29 17:09:02] INFO: Container 607b3e4265f4e065f2338d91ed65d031b2087d6419f77eb968e11e098d8a7805 has stopped
